--- a/KCASM_AppWeb/KCASM_AppWeb/KCASM_AppWeb.csproj
+++ b/KCASM_AppWeb/KCASM_AppWeb/KCASM_AppWeb.csproj
@@ -45,4 +45,13 @@
     <None Include="wwwroot\default\lib\jquery\dist\jquery.min.map" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ExtensionMethods\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\Measures\" />
+    <Folder Include="Views\Message\" />
+    <Folder Include="Views\Weight\" />
+    <Folder Include="Views\Tasks\" />
+  </ItemGroup>
+
 </Project>
