Eliminazione classi obsolete

--- a/KCASM_AppWeb/KCASM_AppWeb/KCASM_AppWeb.csproj
+++ b/KCASM_AppWeb/KCASM_AppWeb/KCASM_AppWeb.csproj
@@ -45,4 +45,10 @@
     <None Include="wwwroot\default\lib\jquery\dist\jquery.min.map" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="ExtensionMethods\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
